--- a/Report 2/GWC Cansat Progress report 2.tex
+++ b/Report 2/GWC Cansat Progress report 2.tex
@@ -2,6 +2,8 @@
 \usepackage{graphicx} %Images and figures
 \usepackage{titlepic} %Logo in title
 \usepackage[margin=1in]{geometry} %margin control
+\usepackage{hyperref} %hyperlinks
+
 
 \title{\bf Cansat UK Progress Report 2}
 \author{
@@ -18,7 +20,7 @@
 \pagenumbering{arabic}
 
 \chapter{Progress Report}
-	\section{Progress Statement}
+	\section{Progress Statement}%We need to shorten this
 	We have continued along our current plan, working on each 
 	section of the project simultaneously in sub-teams. A summary 
 	of our progress is shown below:
@@ -47,6 +49,10 @@
 			recieved from TeamGantt to produce weekly gantt charts
 			to ensure that we stay on schedule within each sub-team, in
 			addition to an overall layout of our progress.
+			\item We are continuing to maintain our website, hosted on the
+			domain \url{gwccansat.com}, in addition to having launched our
+			video blog (`vlog') programme, showing our progress on a weekly
+			basis, leading up to the competition.
 		\end{itemize}
 		
 		\item[Mechanical development] \hfill \begin{itemize}
@@ -84,8 +90,31 @@
 		\item[Software design] \hfill \begin{itemize}
 			\item Currently, the project progress is fullcruming off the
 			dependency on testing the sensors from our current design.
-			Hence, we have allocated extra team members to this section.
-			\item More stuff here, I'm tired. Sleep time.
+			Hence, we have allocated extra team members and 
+			resources to this section.
+			\item We are currently working on testing each individual sensor, 
+			to ensure that we are able to interface with them correctly with
+			the current wiring solution and ready to make notes of any required 
+			ammendments.
+			\item Additionally, we are able to use elements of last year's code
+			to assist us when creating the final cansat program and base
+			station program.
+		\end{itemize}
+
+		\item[Secondary mission] \hfill \begin{itemize}
+			\item We continue to strive towards having a diamagnetically 
+			stabilised levitation exeriment to harvest vibration energy. We have
+			unfortunately run into several technical problems, so are currently
+			still working on having a functional experiment that produces power.
+			\item As a precaution for the secondary mission not working, we 
+			have begun brainstorming several other experiments to put in the
+			secondary mission module. This is made easier by our modular
+			experimental compartment in our cansat design.
+			\item We have developed a plan to have multiple experiments ready
+			by the time of the competition, so that we have a backup options
+			in case of failure to prepare the main experiment. It will also allow
+			us to demonstrate the concept of switching the expermental module 
+			quickly.
 		\end{itemize}
 
 	\end{description}
