--- a/Report 2/GWC Cansat Progress report 2.tex
+++ b/Report 2/GWC Cansat Progress report 2.tex
@@ -1,5 +1,6 @@
 \documentclass{report}
-\usepackage{graphicx} %Images and figures
+\usepackage{fullpage, graphicx} %Images and figures
+\usepackage{rotating} %rotating images
 \usepackage{titlepic} %Logo in title
 \usepackage[margin=1in]{geometry} %margin control
 \usepackage{hyperref} %hyperlinks
@@ -113,11 +114,19 @@
 			\item We have developed a plan to have multiple experiments ready
 			by the time of the competition, so that we have a backup options
 			in case of failure to prepare the main experiment. It will also allow
-			us to demonstrate the concept of switching the expermental module 
+			us to demonstrate the concept of switching the experimental module 
 			quickly.
 		\end{itemize}
 
 	\end{description}
-		
+
+
+	\section{Gantt Chart}
+	\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{ganttDec.PNG}
+	\caption{Gantt chart as of December 2017. Full resolution chart 
+	available at:\url{https://goo.gl/dDAatf}}
+	\end{figure}
 
 \end{document}
