--- a/Report 2/GWC Cansat Progress report 2.tex
+++ b/Report 2/GWC Cansat Progress report 2.tex
@@ -28,7 +28,7 @@
 	GWC Cansat\\
 	George Watson's College	
 }
-\titlepic{\includegraphics[width=8cm]{frontLogo}}
+\titlepic{\vspace{-20pt}\includegraphics[width=8cm]{frontLogo}}
 \date{December 2017}
 
 
@@ -155,6 +155,15 @@
 			\item{Abhijith Ganesan} --- Electrical and Software (joined the team 
 			16/11/2017).
 	 	\end{description}
+
+		\begin{figure}[H]
+			\begin{center}
+				\includegraphics[width=0.5\textwidth]{placeholder}
+			\end{center}
+			\vspace{-15pt}
+			\caption{2018 GWC Cansat team}
+		\end{figure}
+
 	
 	\section{Mission Overview}
 		\subsection{Mission Objectives}
@@ -162,7 +171,7 @@
 		now put a larger emphasis on creating multiple experimental modules as part
 		of our secondary mission. This is a precaution as explained further in the
 		risk assessment.
-		
+
 		\subsubsection{Primary Mission}
 		The primary mission commits the parameters for telemetry air pressure and
 		air temperature. The chosen sensors also propose several other parameters, 
@@ -171,6 +180,17 @@
 		orientation.
 
 		\subsubsection{Secondary Mission}
+
+		\begin{wrapfigure}{r}{0.28\textwidth}
+			\vspace{-35pt}
+	 		\begin{center}
+			\includegraphics[width=0.3\textwidth]{placeholder}
+			\end{center}
+			\vspace{-15pt}
+			\caption{A neodymium magnet floating freely in diamagnetically
+			stabilised levitation, unaffected by frictional forces}
+		\end{wrapfigure}
+
 		The team has chosen to incorporate a small, modular, experimental
 		compartment in the cansat. It will be used to house a small diamagnetically
 		stabilised levitating ferromagnet, from which, energy from the vibrations in 
@@ -183,18 +203,32 @@
 		primary purpose of the team’s experimentation is to test if this is a viable
 		alternative to traditional power sources.\\
 		
+		
+
+		
 
 		{\color{blue} \textbf{Changes Made}
 		\begin{itemize}
 			\item More emphasis has been put on the secondary mission and its 
 			ability to be switched out with an alternate experimental module.
 			\item Other experiments are now being researched, such as detecting
-			cosmic reactions happening in the atmsophere due to solar winds, etc.
+			cosmic reactions happening in the atmsophere due to solar winds, etc.\\
 		\end{itemize}
 		}
 
+		
+		\begin{figure}[H]
+			\begin{center}
+				\includegraphics[width=0.5\textwidth]{placeholder}
+			\end{center}
+			\vspace{-10pt}
+			\caption{Proposed wireframe design of base station live processing graphs
+			and parameter display}
+		\end{figure}
+
+
 		\subsection{What Will be Measured, Why and How}
-		\begin{table}[h!]
+		\begin{table}[H]
 		\setlength{\tabcolsep}{6pt}
 		\begin{tabularx}{\textwidth}{@{} YYY @{}}
         		\toprule
@@ -264,17 +298,6 @@
 		\end{itemize}
 		}
 		
-		%Need to get a better photo - this one is low res, off-centre, 
-		%pulled from google doc, etc.
-
-		\begin{figure}[H]
-			\begin{center}
-				\includegraphics[width=\textwidth]{CadRenders}
-			\end{center}
-			\vspace{-15pt}
-			\caption{Proposed wireframe design of base station live processing graphs
-			and parameter display}
-		\end{figure}
 
 
 \chapter{Cansat Description}
@@ -326,13 +349,16 @@
 		$\frac{1}{2}\lambda$ dipole communications antenna is mounted outside
 		the outer shell along the long axis in order to optimise communications.
 
+		%Need to get a better photo - this one is low res, off-centre, 
+		%pulled from google doc, etc.
 		\begin{figure}[H]
 			\begin{center}
 				\includegraphics[width=0.8\textwidth]{CadRenders}
 			\end{center}
 			\vspace{-15pt}
-			\caption{Computer--aided design renders}
+			\caption{Computer--aided design (CAD) renders of the mechanical design}
 		\end{figure}
+
 
 	\section{Electronics Design}
 		Two independent cells are symmetrically distributed in the cansat and
@@ -356,7 +382,7 @@
 		
 		\begin{figure}[H]
 			\begin{center}
-				\includegraphics[width=0.6\textwidth]{placeholder}
+				\includegraphics[width=0.5\textwidth]{placeholder}
 			\end{center}
 			\vspace{-15pt}
 			\caption{Electronics sub-systems diagram}
