--- a/Report 2/GWC Cansat Progress report 2.tex
+++ b/Report 2/GWC Cansat Progress report 2.tex
@@ -56,7 +56,7 @@
 			different	parts of the cansat development was leading to issues
 			with team members not knowing how the overall	project was 
 			progressing. The team leaders now collaborate to produce an
-			internal report of progress every 2-3 weeks. This has recieved
+			internal report of progress every 2-3 weeks. This has received
 			positive feedback within the team.
 			\item We are continuing to maintain our website, hosted on the
 			domain \url{gwccansat.com}, in addition to having officially launched our
@@ -70,7 +70,7 @@
 		\item[Mechanical development] \hfill \begin{itemize}
 			\item We continue to work towards having a finalised 
 			CAD model. This is dependent upon space requirements of
-			our sensors and custom PCBs, so is still undergoing iterative
+			our sensors and custom PCBs, so it is still undergoing iterative
 			revisions.
 			\item Additionally, we are still working towards having a modular
 			compartment for our secondary mission, allowing the cansat to
@@ -80,7 +80,7 @@
 		\end{itemize}
 
 		\item[Electronics design] \hfill \begin{itemize}
-			\item Our team hit some budgeting issues, leading us to
+			\item Our team encountered some budgeting issues, leading us to
 			consider other electronics options --- primarily in--house 
 			assembly, as an alternative to PCB fabrication. This was recently
 			resolved with the addition of our new sponsors, providing us
@@ -93,8 +93,8 @@
 		\end{itemize}
 
 		\item[Software design] \hfill \begin{itemize}
-			\item Currently, the project progress is fullcruming off the
-			dependency on testing the sensors from our current design.
+			\item Currently, the project progress is dependent on 
+			testing the sensors from our current design.
 			Hence, we have allocated extra team members and 
 			resources to this section.
 			\item We are currently working on testing each individual sensor, 
@@ -106,7 +106,7 @@
 		\item[Secondary mission] \hfill \begin{itemize}
 			\item We continue to strive towards having a diamagnetically 
 			stabilised levitation exeriment to harvest vibration energy. We have
-			unfortunately run into several technical problems, so are currently
+			unfortunately run into several technical problems, so we are currently
 			still working on having a functional experiment that produces power.
 			\item We have developed a plan to have multiple experiments ready
 			by the time of the competition, so that we have a backup options
@@ -114,7 +114,7 @@
 			us to demonstrate the concept of switching the experimental module 
 			quickly.
 			\item As a precaution for the secondary mission not working, we 
-			have begun brainstorming several other experiments to put in the
+			have started considering several other experiments to put in the
 			secondary mission module. This is made easier by our modular
 			experimental compartment in our cansat design.
 			\item Currently, the alternative secondary missions that we are researching
@@ -128,8 +128,8 @@
 	\end{description}
 
 	\chapter{Introduction}
-	Several changes have been made to our proposal since report 1, 
-	primarily in the secondary mission and team organisation. 
+	Several changes have been made to our proposal since the first report, 
+	particularly in the secondary mission and team organisation. 
 	Changes are shown in blue.
 	\section{Team organisation and Roles}
 		\begin{description}
@@ -165,8 +165,8 @@
 		risk assessment.
 
 		\subsubsection{Primary Mission}
-		The primary mission commits the parameters of air pressure and
-		air temperature for telemetry. The chosen sensors also measure 
+		The primary mission proposes telemetry of air pressure and
+		air temperature. The chosen sensors also measure 
 		several other parameters, 
 		which have been added as an extension of the primary mission: relative
 		humidity, environmental gasses, acceleration, GPS position and cansat
@@ -215,11 +215,11 @@
 		
 		\begin{figure}[H]
 			\begin{center}
-				\includegraphics[width=0.3\textwidth]{placeholder}
+				\includegraphics[width=0.55\textwidth]{gui}
 			\end{center}
 			\vspace{-10pt}
-			\caption{Proposed wireframe design of base station live processing graphs
-			and parameter display}
+			\caption{Proposed design of the base station user interface with live 
+			 data processing and parameter display}
 		\end{figure}
 
 
@@ -318,14 +318,6 @@
 
 	\section{Mechanical Design}
 
-		\begin{wrapfigure}{r}{0.34\textwidth}
-			\vspace{-47pt}
-	 		\begin{center}
-			\includegraphics[width=0.30\textwidth]{placeholder}
-			\end{center}
-			\vspace{-15pt}
-			\caption[X]{Prototype frame for experimental module compartment}
-		\end{wrapfigure}
 
 		The cansat is designed with a modular secondary mission compartment. 
 		This will allow the cansat to be used with different experimental apparatus 
