Final set of changes
Final version of this report.

--- a/Report 2/GWC Cansat Progress report 2.tex
+++ b/Report 2/GWC Cansat Progress report 2.tex
@@ -150,10 +150,10 @@
 
 		\begin{figure}[H]
 			\begin{center}
-				\includegraphics[width=0.5\textwidth]{placeholder}
+				\includegraphics[width=0.7\textwidth]{teamnocaptions}
 			\end{center}
-			\vspace{-15pt}
-			\caption{2018 GWC Cansat team}
+			\vspace{-12pt}
+			\caption{2018 GWC Cansat team (left to right: Harold Thain, Abhijith Ganesan, Erin Edmonstone, Josh Flint, Morven Pennie, Charles Cameron)}
 		\end{figure}
 
 	
@@ -200,13 +200,14 @@
 		As a stretch goal, the team is now also looking to make several additional
 		experimental modules, so that the ability to switch experiments may be 
 		demonstrated, as well as possibly utilised for a physical launch. One of the 
-		experiments currently being researched are researching use of two 
+		experiments currently being researched is the use of two 
 		Geiger--Muller tubes to measure changes in frequency of cosmic showers 
-		and collisions.
+		and collisions as altitude increases.
 		\\\\
 		Another experiment that the team is considering is the use of infrared,
 		visible light and other electromagnetic sensors to determine the health of
-		vegetation, which can be applied to forests, plantations and nature conservation
+		vegetation, which can be applied to forests, plantations and nature
+		conservation
 		zones, in order to survey overall health of vegetation in these respective
 		areas.
 		\\
@@ -298,7 +299,7 @@
 
 \chapter{Cansat Description}
 	\section{Overview}
-		This year’s entry has taken much more of an emphasis on a scientific
+		This year's entry has taken much more of an emphasis on a scientific
 		experimental module as the secondary mission. Hence, we have designed 
 		the cansat with a focus on technical and scientific accuracy. We aim to
 		complete most of the cansat construction in-house. The only part of the
@@ -306,7 +307,7 @@
 		not have access to the materials or machinery for creating our own.
 		\\\\
 		Care was taken to ensure that the electronic sensors used are not 
-		negligibly affected by strong and changing magnetic fields, however 
+		significantly affected by strong and changing magnetic fields, however 
 		testing will be required later to confirm that this is not an issue before 
 		any launches.
 		\\\\
@@ -349,7 +350,7 @@
 
 
 	\section{Electronics Design}
-		Two independent cells are symmetrically distributed in the cansat and
+		Two independent 18650 cells are symmetrically placed in the cansat and
 		connected in series to deliver native 3.7V DC power to the cansat at 
 		4800mAh power to the cansat sub-systems.
 		Built-in IPS (Intelligent Power Select) in the CHIP Pro enables management
@@ -433,13 +434,17 @@
 		further assisting the recovery team in locating the cansat.
 		\\\\
 		{\color{blue}As an additional measure, foam padding will be added 
-		directly underneath the batteries to protect them from extensive damage, which
-		could otherwise risk the battery life of the cansat during the recovery phase of
+		directly underneath the batteries to protect them from extensive damage,
+		which
+		could otherwise risk the battery life of the cansat during the recovery 
+		phase of
 		the launch.
 		\\\\
-		A buzzer will also be implemented to the design, which will sound
-		after the cansat enters post-landing mode, which will sound at approximately
-		90db, which is equatable to the amplitude of a jet from 300m distance.}
+		A buzzer will also be added to the design and will sound
+		after the cansat enters post-landing mode. It will sound at approximately
+		90db, which is equatable to the amplitude of a jet from 300m distance.
+		Additionally, we will provide contact information on the cansat's fuselage
+		in case the cansat cannot be recovered.}
 
 	\section{Ground Support Equipment}
 		The team is developing a lightweight, robust base station program, which 
@@ -456,8 +461,8 @@
 			\item Battery charging station and 5V supply
 		\end{itemize}
 		Our base station will receive, aggregate and display live data
-		from all the onboard sensors, showing the relevant graphs to our primary
-		and secondary missions, respectively. It will also store all raw and 
+		from all the onboard sensors, showing the relevant graphs of our primary
+		and secondary mission data aggregation. It will also store all raw and 
 		processed data locally, in addition to backing up to an external drive or 
 		laptop.
 	
@@ -472,15 +477,15 @@
 	\end{figure}
 	
 	\section{Team and External Support}
-		We currently have five team members with varying levels of experience in
+		There are currently five team members with varying levels of experience in
 		mechanical, electronic, and software design. While our team has a good
-		technical background in all aspects required for cansat design, {\color{blue}
+		technical background in all aspects required for cansat design. {\color{blue}
 		We have now completed a training programme to ensure the team is 
 		prepared for the competition with the appropriate skills.}
 		\\\\
 		We also continue to arrange occasional meetings and communications with
 		professionals in various relevant industries, thus improving our 
-		understanding of how to further improve the quality of our electronics 
+		understanding of how to improve the quality of our electronics 
 		and mechanical design decisions, as well as aiding us in preparing our
 		secondary mission.
 	\clearpage
@@ -580,13 +585,13 @@
 	\end{wrapfigure}
 
 	In addition to the following, the team has also renewed the graphical designs
-	for this campaign, which will help to give the team a fresh and stand--out
-	aesthetic.
+	for this campaign, which we feel will help boost outside interest in the project,
+	as well as givin.
 	
 		
 	\section{Media}
-		For this years outreach we have designed, programmed and are hosting our
-		own website at \url{gwccansat.com}.\\\\
+		For this years outreach, we have designed and programmed a new website,
+		which is hosted at \url{gwccansat.com}.\\\\
 		We also host pages on Instagram, Facebook and Twitter, giving regular
 		updates	on our Team's progress.\\\\
 
@@ -604,13 +609,15 @@
 		will be informing viewers of our progress. Several videos have already been
 		released and we look forward to receiving feedback on this aspect of our
 		project. Our channel can be viewed here: \url{https://goo.gl/YxHHkH} and 
-		our first video can be viewed here: \url{https://youtu.be/tEawegQ2coM}\\\\\\
+		our first video can be viewed 
+		here: \url{https://youtu.be/tEawegQ2coM}\\\\\\
 		We aim to livestream much of the development process, such 
-		as the electronics PCB design and mechanical CAD modelling. Additionally, we
+		as the electronics PCB design and mechanical CAD modelling. 
+		Additionally, we
 		would like to livestream and record elements of the competition experience
 		this year, to show to our sponsors and other interested viewers, as we
-		have received a magnitude of positive engagement and interest in this 
-		aspect of the competition.
+		have received a great quantity of positive engagement in various aspects
+		of the competition.
 	
 	\section{Physical Press}
 		Following the success of our booth at the 2017 Edinburgh maker faire, we
@@ -631,15 +638,14 @@
 		\end{wrapfigure}
 
 		\noindent
-		Additionally, we will continue to participate in engaging younger children
+		Furthermore, we will continue to participate in engaging younger children
 		from the GWC junior school with STEM education, as we did last year.
 		We believe that in engaging kids with STEM at a young age, we will continue
 		to inspire generations of scientists and engineers to come. We will also
-		research into organising visits to other primary schools around the Edinburgh
-		area.\\\\
+		try to organise visits to other primary schools around Edinburgh.\\\\
 		Following the largely successful 2017 campaign, the team featured in the
-		 `Edinburgh Evening News' and aims to feature in other larger scale press
-		releases such as this in future months.
+		 `Edinburgh Evening News' and we hope to be
+		featured in other large scale press releases such as this in the future.
 
 
 \end{document}
